--- a/app/index.html
+++ b/app/index.html
@@ -64,14 +64,14 @@
     <div class="container-fluid mq-full-height">
         <div class="row mq-full-height">
             <!-- left bar tree item -->
-            <div class="col-md-3 sidebar mq-full-height">
+            <div class="col-md-2 sidebar mq-full-height">
                 <div class="btn-toolbar" role="toolbar" style="margin-bottom:5px;">
-                    <button type="button" ng-click="resource_tree.expand_all()" class="btn btn-success">全部展开</button>
-                    <button type="button" ng-click="resource_tree.collapse_all()" class="btn btn-info">全部折叠</button>
+                    <button type="button" ng-click="resource_tree.expand_all()" class="btn btn-sm btn-success">展开</button>
+                    <button type="button" ng-click="resource_tree.collapse_all()" class="btn btn-sm btn-info">折叠</button>
                     <!-- Split button -->
                     <div class="btn-group  pull-right" dropdown>
-                        <button type="button" ng-click="fetch_tree()" class="btn btn-warning">刷新列表</button>
-                        <button type="button" class="btn btn-warning dropdown-toggle">
+                        <button type="button" ng-click="fetch_tree()" class="btn btn-sm btn-warning">刷新</button>
+                        <button type="button" class="btn btn-sm btn-warning dropdown-toggle">
                             <span class="caret"></span>
                             <span class="sr-only">Split button!</span>
                         </button>
@@ -91,21 +91,9 @@
                 <div>&nbsp;</div>
             </div>
             <!--main content -->
-            <div class="col-md-9 main">
+            <div class="col-md-10 main">
                 <accordion close-others="false">
-                    <accordion-group is-open="accordion_group_status.one.open">
-                        <accordion-heading>
-                            {{accordion_group_status.one.heading}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
-                        </accordion-heading>
-                        <div>
-                            <span class="glyphicon glyphicon-paperclip">{{resource_id}}</span>
-                            <a href="rest/res/metadata/{{resource_id}}" target="_blank" class="pull-right" style="margin-right: 5px;">
-                                <span class="glyphicon glyphicon-link" style="margin-right: 5px;"></span>元数据</a>
-                            <a href="#" ng-click="reload_item()" class="pull-right" style="margin-right: 10px;">
-                                <span class="glyphicon glyphicon-retweet" style="margin-right: 5px;"></span>重载</a>
-                        </div>
-                        <div class="form-control ace_editor" style="height:180px;font-size:14px;" ng-model="resource_editor_model" ui-ace="resourceOptions" readonly="true"></div>
-                    </accordion-group>
+                    
                     <accordion-group is-open="accordion_group_status.two.open">
                         <accordion-heading>
                             {{accordion_group_status.two.heading}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.two.open, 'glyphicon-chevron-right': !accordion_group_status.two.open}"></i>
@@ -113,23 +101,11 @@
                         <form role="form">
                             <div class="form-group">
                                 <div>
-                                    <input type="text" ng-change="splice_query()" class="form-control" id="inputFilter" placeholder="Filter" ng-model="splice.filter" />
+                                    <input type="text" class="form-control" id="linkFilter" placeholder="拼接结果" ng-model="splice.query" />
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label for="inputLimit" class="control-label">Limit:</label>
-                                        <div>
-                                            <input type="text" ng-change="splice_query()" class="form-control" id="inputLimit" ng-model="splice.limit" />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="inputOffset" class="control-label">Offset:</label>
-                                        <div>
-                                            <input type="text" ng-change="splice_query()" class="form-control" id="inputOffset" ng-model="splice.offset" />
-                                        </div>
-                                    </div>
                                     <div class="form-group">
                                         <label for="inputOrderby" class="control-label">Orderby:</label>
                                         <div>
@@ -137,30 +113,70 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group col-md-9">
-                                    <div class="btn-toolbar" role="toolbar" style="margin-bottom:2px;">
-                                        <div class="btn-group">
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'json'">JSON</label>
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'xml'">XML</label>
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'csv'">CSV</label>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="inputLimit" class="control-label">Limit:</label>
+                                        <div>
+                                            <input type="text" ng-change="splice_query()" class="form-control" id="inputLimit" ng-model="splice.limit" />
                                         </div>
-                                        <div class="btn-group">
-                                            <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'format'">格式化</label>
-                                            <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'default'">默认值</label>
-                                        </div>
-                                        <button type="button" ng-click="query()" class="btn btn-sm btn-danger pull-right">执行</button>
-                                        <button type="button" ng-click="splice_query()" class="btn btn-sm btn-info pull-right">拼接</button>
                                     </div>
-                                    <!--<textarea id="textareaResult"  class="form-control"  rows="8"></textarea>-->
-                                    <div class="form-control ace_editor" style="height: 180px;font-size:14px;" ui-ace="resultOptions"></div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="inputOffset" class="control-label">Offset:</label>
+                                        <div>
+                                            <input type="text" ng-change="splice_query()" class="form-control" id="inputOffset" ng-model="splice.offset" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="inputVisible" class="control-label">Visible:</label>
+                                        <div>
+                                            <input type="text" ng-change="splice_query()" class="form-control" id="inputOrderby" ng-model="splice.visible" />
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div>
-                                    <input type="text" class="form-control" id="linkFilter" placeholder="拼接结果" ng-model="splice.query" />
+                                    <input type="text" ng-change="splice_query()" class="form-control" id="inputFilter" placeholder="Filter" ng-model="splice.filter" />
                                 </div>
                             </div>
                         </form>
+                    </accordion-group>
+                    <accordion-group is-open="accordion_group_status.one.open">
+                        <accordion-heading>
+                            {{accordion_group_status.one.heading}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
+                        </accordion-heading>
+                        <div class="col-md-6">
+                            <div style="margin-top: 11px;margin-bottom: 2px;">
+                                <span class="glyphicon glyphicon-paperclip">{{resource_id}}</span>
+                                <a href="rest/res/metadata/{{resource_id}}" target="_blank" class="pull-right" style="margin-right: 5px;">
+                                    <span class="glyphicon glyphicon-link" style="margin-right: 5px;"></span>元数据</a>
+                                <a href="#" ng-click="reload_item()" class="pull-right" style="margin-right: 10px;">
+                                    <span class="glyphicon glyphicon-retweet" style="margin-right: 5px;"></span>重载</a>
+                            </div>
+
+                            <div class="form-control" style="height:350px;font-size:14px;" ng-model="resource_editor_model" ui-ace="resourceOptions" readonly="true"></div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <div class="btn-toolbar" role="toolbar" style="margin-bottom:2px;">
+                                <div class="btn-group">
+                                    <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'json'">JSON</label>
+                                    <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'xml'">XML</label>
+                                    <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'csv'">CSV</label>
+                                </div>
+                                <div class="btn-group">
+                                    <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'format'">格式化</label>
+                                    <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'default'">默认值</label>
+                                </div>
+                                <button type="button" ng-click="query()" class="btn btn-sm btn-danger pull-right">执行</button>
+                                <button type="button" ng-click="splice_query()" class="btn btn-sm btn-info pull-right">拼接</button>
+                            </div>
+                            <!--<textarea id="textareaResult"  class="form-control"  rows="8"></textarea>-->
+                            <div class="form-control ace_editor" style="height: 350px;font-size:14px;" ui-ace="resultOptions"></div>
+                        </div>
                     </accordion-group>
                     <accordion-group is-open="accordion_group_status.three.open">
                         <accordion-heading>
